--- a/index.html
+++ b/index.html
@@ -11,51 +11,32 @@
       sizes="96x96"
     />
 
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css" />
+
     <title>Join Our Newsletter | devChallenges.io</title>
-
-    <!--You are welcome to delete these styles or modify them in your own stylesheet -->
-    <style>
-      * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
-
-      body {
-        height: 100vh;
-      }
-
-      .author-info {
-        font-size: 14px;
-        text-align: center;
-        margin-top: 16px;
-        color: rgb(55, 65, 81);
-      }
-
-      .author-info a {
-        text-decoration: none;
-      }
-    </style>
   </head>
   <body>
-    <!-- 
-    Join our newsletter
- 
-    Keep up with our latest collections, exclusive deals, and special offers! We introduce a new collection every week, so stay tuned to snag the hottest items just for you.
- 
-    Enter your email address
- 
-    Subscribe now
- 
-    Your email is 100% confidential and won’t send you any spam.
-
-    -->
-
     <div class="author-info">
-      Coded by <a href="#">Your Name Here</a> | Challenge by
+      Coded by <a href="https://github.com/bertramrayhan/" target="_blank">Bertramrayhan</a> | Challenge by
       <a href="https://www.devchallenges.io?ref=challenge" target="_blank"
         >devChallenges.io</a
       >.
     </div>
+
+    <main>
+      <img src="resources/logo.svg" alt="logo">
+      <h1>Join our newsletter</h1>
+      <h3 style="text-align: center;max-width: 640px;margin: 0 auto;padding: 0 1rem;overflow-wrap: break-word;">Keep up with our latest collections, exclusive deals, and special offers! We introduce a new collection every week, so stay tuned to snag the hottest items just for you.</h3>
+
+      <div class="email">
+        <input type="text" name="inputEmail" id="inputEmail" placeholder="Enter your email address">
+
+        <input type="submit" value="Subscribe now" id="submitEmail">
+        <h5>Your email is 100% confidential and won’t send you any spam.</h5>
+      </div>
+    </main>
   </body>
 </html>
